Bug 760868 - Gmail includes scripts names that make the debugger script list too long; r=past
UltraBlame original commit: e767617a00037e77fbecfff2096c1eb76f81f31a

--- a/browser/themes/gnomestripe/devtools/debugger.css
+++ b/browser/themes/gnomestripe/devtools/debugger.css
@@ -19,6 +19,16 @@ padding
 0
 ;
 }
+#
+scripts
+{
+max
+-
+width
+:
+350px
+;
+}
 .
 list
 -
@@ -98,6 +108,15 @@ stackframe
 -
 name
 {
+-
+moz
+-
+padding
+-
+end
+:
+4px
+;
 font
 -
 weight
