--- a/browser/themes/pinstripe/devtools/debugger.css
+++ b/browser/themes/pinstripe/devtools/debugger.css
@@ -27,6 +27,16 @@ padding
 0
 ;
 }
+#
+scripts
+{
+max
+-
+width
+:
+350px
+;
+}
 .
 list
 -
@@ -106,6 +116,15 @@ stackframe
 -
 name
 {
+-
+moz
+-
+padding
+-
+end
+:
+4px
+;
 font
 -
 weight
